fix dropdown label alignment
Close #32

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -83,7 +83,6 @@ nav {
 
 #orderby {
     margin-bottom: 3rem;
-    display: none;
 }
 .orderby-label {
     margin-right: 1.5rem;
